--- a/nhso1/src/index.css
+++ b/nhso1/src/index.css
@@ -6,7 +6,8 @@
 @layer base { 
     body {
         margin: 0;
-        @apply bg-gray-200;
-        @apply text-gray-900;
+        font-family: "Kanit", sans-serif;
+        background: linear-gradient(140deg, rgba(255,223,223,1) 0%, rgba(252,168,168,1) 50%, rgba(75,132,239,1) 100%);
+    
     }
 }
